--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,14 +4,8 @@ services:
     image: postgres:14
     volumes:
       - pgdata:/var/lib/postgresql/data
-    # env_file:
-    #   - ../backend/.env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PORT: ${POSTGRES_PORT}
+    env_file:
+      - ../backend/.env
     networks:
       - backend
 
@@ -26,17 +20,8 @@ services:
     volumes:
       - static_volume:/app/static/
       - media_volume:/app/media/
-    # env_file:
-    #   - ../backend/.env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      SECRET_KEY: ${SECRET_KEY}
-      DEBUG: ${DEBUG}
-      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+    env_file:
+      - ../backend/.env
     networks:
       - backend
       - frontend
