--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,12 +11,9 @@ COPY /backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY /backend .
-COPY /data ./data/
-# COPY /backend/media/ ./media/
+COPY /data/ingredients.json .
 
 CMD ["sh", "-c", "python manage.py makemigrations && \
     python manage.py migrate && \
-    python manage.py load_data --type ingredients && \
-    python manage.py load_data --type users && \
-    python manage.py load_data --type recipes && \
+    python manage.py load_data && \
     python manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:8000 backend.wsgi"]
